--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,8 @@
 server {
     listen 80;
+
+    server_name 130.193.43.108;
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
