--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -39,8 +39,8 @@ jobs:
       - name: Login to Docker 
         uses: docker/login-action@v1 
         with:
-          username: 'Anthonybas'
-          password: 'Lovespring12'
+          username: anthonybas
+          password: Lovespring12
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2 
         with:
