--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -22,6 +22,11 @@ server {
         proxy_pass http://web:8000/api/;
     }
 
+    location /admin/ {
+        proxy_set_header        Host $host;
+        proxy_pass http://web:8000/admin/;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
