--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,6 +21,7 @@ itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 oauthlib==3.2.2
+python-decouple
 Pillow==9.3.0
 psycopg2-binary==2.8.6
 pycparser==2.21
